--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .container-wrapper--red {
-    background-color: #f05f40;
+    background-color:  #f05f40;
     color: white;
 }
 
@@ -204,6 +204,12 @@ body {
     margin-bottom: 40px;
 }
 
+.favorites i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
 /* Alert */
 
 .alert-container .col-12 {
@@ -234,3 +240,6 @@ body {
 }
 
 /* Quotes */
+.quotes .page-header {
+    margin-bottom: 25px;
+}
